--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -2,7 +2,16 @@
 
 .cn-navbar {
     background: $color-brand;
+    border-radius: 4px;
+    margin-bottom: .625rem;
     &_title {
         color: white;
+        margin: 1rem 1rem;
+        display: inline-block;
+        vertical-align: top;
+        font-size: $font-size-lg;
+    }
+    &_logo {
+        display: inline-block;
     }
 }
