--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,7 +1,7 @@
 @import '../scss/variables';
 
 .cn-navbar {
-    background: $color-brand;
+    background: $color-text;
     border-radius: 4px;
     margin-bottom: .625rem;
     &_title {
