--- a/src/components/Historical.scss
+++ b/src/components/Historical.scss
@@ -7,6 +7,7 @@
         position: relative;
         padding: .625rem 1rem;
         line-height: 1.875rem;
+        background-color: #ECF0F1;
         &_button {
             position: absolute;
             right: 1rem;
