--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,6 +1,8 @@
+@import './variables';
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 $montserrat: 'Montserrat';
 
 body {
     font-family: $montserrat !important;
+    color: $color-text;
 }
