--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,7 @@
-$color-brand: #2C3E50;
+$color-text: #2C3E50;
 $color-text-primary: white;
 $color-text-secondary: #95A5A6;
+$font-size-sm: .875rem;
 $font-size-md: 1rem;
 $font-size-lg: 1.25rem;
 $font-size-xl: 1.375rem;
